# talos

./: .gitignore  .mcp.json  AGENTS.md  AddHostFunction.md  CLAUDE.md  CONTRIBUTING.md  IirisMigration.md  README.md  ROADMAP.md  justfile  testsuite_report.txt
programs/rust/: Cargo.toml  rust-toolchain.toml
programs/rust/decode/: Cargo.toml
programs/rust/decode/src/: exports.rs  lib.rs
programs/rust/dyn_dispatch/: Cargo.toml
programs/rust/dyn_dispatch/src/: exports.rs  lib.rs
programs/rust/encode/: Cargo.toml
programs/rust/encode/src/: exports.rs  lib.rs
programs/rust/encode_decode/: Cargo.toml
programs/rust/encode_decode/src/: lib.rs  (+1 more)
programs/rust/encode_decode_tests/: Cargo.toml
programs/rust/host_counter/: Cargo.toml
programs/rust/is_even/: Cargo.toml  verifier.toml
programs/rust/is_prime/: Cargo.toml
programs/rust/itoa/: Cargo.toml  verifier.toml
programs/rust/memchr/: Cargo.toml  verifier.toml
programs/rust/merge_sort/: Cargo.toml
programs/rust/mergesort/: Cargo.toml
programs/rust/near_flag/: Cargo.toml
programs/rust/near_kv_contract/: Cargo.toml
programs/rust/num_integer/: Cargo.toml  verifier.toml
programs/rust/reverse_inplace/: Cargo.toml  verifier.toml
programs/rust/rust_array/: Cargo.toml
programs/rust/rust_array_tests/: Cargo.toml
programs/rust/rust_consumer/: Cargo.toml
programs/rust/rust_option/: Cargo.toml  verifier.toml
programs/rust/rust_std/: Cargo.toml
programs/rust/rust_u64/: Cargo.toml
programs/rust/rust_u64_tests/: Cargo.toml
programs/rust/swap_elements/: Cargo.toml
programs/rust/total_variation/: Cargo.toml
programs/rust/xor_sum/: Cargo.toml  verifier.toml
(+355 files in other folders)
