[workspace]
resolver = "2"
members = [
  "dyn_dispatch",
  "host_counter",
  "is_even",
  "is_prime",
  "itoa",
  "memchr",
  "near_kv_contract",
  "num_integer",
  "reverse_inplace",
  "rust_option",
  "xor_sum",
]

# The wasm here is a verification subject, not a deployable artifact: keep
# codegen as close to a direct transpilation of the Rust source as possible.
# No optimization, no LTO, full debug info (DWARF + name section land in the
# target/ wasm; the committed program.wasm is still stripped of custom
# sections by `wasm-tools strip` for reproducibility).
[profile.release]
opt-level = 0
lto = false
debug = "full"
